style.css
body,html{
    margin:0px;
    height:100%;

}


.calculatorplate
    {

        width:500px;
        height:435px;
        border:1px solid rgb(30, 33, 214);
        background: yellow;
        margin-bottom: 100px;      
        border-radius: 15px;

        
       
        


    }


    .buttonsarea
    {
      margin-top: 0px;
      margin-left: 100px;
      width: 300px;
      height: 180px;
      
      
      
      
    }

    .button
    {
        border-radius: 15px;
        width:50px;
        height:50px;
        margin: 10px;
        background-color:blueviolet;
    }


    .deletionbuttons
    {
       display:flex;
       flex-direction: column;
       width: 100px;

    }


    .clearbutton
    {
        border-radius: 15px;
        width:50px;
        height:20px;
        margin:10px;
        background-color: brown;
    }

    .deletebutton
    {
        border-radius: 15px;
        width:50px;
        height:20px;
        margin:10px;
        background-color:cornflowerblue; 
    }




    #screen
    {
        width:300px;
        height:50px;
        border:1px solid black;
        background-color: rgb(136, 148, 136);
        border-radius: 15px;
        margin-top: 15px;
        margin-left: 95px;

    }

    



 .background{

   display:flex;
   flex-direction: column;
   justify-content:space-between;
   align-items: center;
   background-color: rgb(12, 19, 5);
   height:100%;

   
 }
 
 
  /*  .containerThree
  {
   display: flex;
   flex-direction: row;
   gap: 35px;
   flex-wrap: wrap;
   
    }*/
    
    /*.containerFour
    {
    display: flex;
    flex-direction: row;
    gap:25px;
    flex-wrap: wrap;
    }*/

    

    /*.recText{
        display:flex;
        flex-wrap: wrap;
        font-size: small;
        width: 110px;
        color: aliceblue;
    }*/

    


    .footer
    {

        display:flex;
        justify-content: center;
        align-items: center;
        background-color: blue;
        color: white;
    }
   

